--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
 		<skipTests>true</skipTests>
 
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,6 +64,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.github.vihanga951016</groupId>-->
+			<!--<artifactId>security-spring-boot-2.5.6</artifactId>-->
+			<!--<version>1.0.0</version>-->
+			<!--<scope>compile</scope>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
