--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,12 +1,10 @@
 spring.application.name=user
 
-spring.profiles.active=dev
+server.port=8080
 
-server.port=8282
-
-spring.datasource.url=jdbc:mysql://localhost/user?autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=asd321
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?autoReconnect=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=MYSQL
